Add pop-out button to open extension UI in a full browser tab

--- a/extension/src/index.css
+++ b/extension/src/index.css
@@ -82,6 +82,12 @@ body {
   overflow: hidden;
 }
 
+body.tab-mode {
+  width: 100%;
+  min-height: 100vh;
+  overflow: auto;
+}
+
 * {
   border-color: hsl(var(--border));
 }
